Fix LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>AI/ML Engineer • Software Developer</p>
     <p class="links">
       <a href="https://github.com/Anshul-Patidar" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/anshul-patidar" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/anshulpatidar-cse/"_blank">LinkedIn</a>
       <a href="RESUME.pdf" target="_blank">Resume (PDF)</a>
     </p>
   </header>
@@ -65,3 +65,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
