Update LinkedIn link and other changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I'm an AI/ML Engineer passionate about cybersecurity, automation, 
+        I'm an CSE  Engineer and passionate about cybersecurity, automation, AI/ML
         and building practical ML systems. I enjoy contributing to open-source 
         and working on impactful tech.
       </p>
