--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main class="container">
 
     <section>
-      <h2>Skills</h2>
+      <h2>MY Skills</h2>
       <p>Python • Java • TensorFlow • PyTorch • fastai • scikit-learn • Linux • Git • Docker</p>
     </section>
 
